# youtube-music-uploader

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.rst  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
docker/: Dockerfile  README.md  auth.sh  daemon.sh  manifest.yml
youtube_music_uploader/: __init__.py  auth.py  uploader_daemon.py
