[metadata]
name = youtube_music_uploader
version = attr: youtube_music_uploader.__version__
description = Youtube Music package to upload your music library to Youtube Music
long_description = file: README.rst
author = Jay MOULIN
author_email = jay@femtopixel.com
url = https://github.com/jaymoulin/youtube-music-uploader/
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Communications :: File Sharing
    Topic :: Artistic Software
    Topic :: Internet :: File Transfer Protocol (FTP)
    Topic :: Home Automation
    Topic :: Internet
    Topic :: Multimedia :: Sound/Audio

[options]
include_package_data = True
packages = find:
install_requires =
    watchdog
    bs4
    requests
    ytmusicapi
python_requires = >=3

[options.entry_points]
console_scripts =
    youtube-music-auth = youtube_music_uploader.auth:main
    youtube-music-upload = youtube_music_uploader.uploader_daemon:main
    youtube-music-upload-deduplicate = youtube_music_uploader.deduplicate:main
